Added support for listing battles as an author, and for listing battles as a voter
