# pkg/battles/request.go
@@ -1,0 +1,63 @@
+package battles
+
+import (
+	"github.com/bitterbattles/api/pkg/input"
+	"github.com/bitterbattles/api/pkg/lambda/api"
+)
+
+const (
+	sortParam       = "sort"
+	pageParam       = "page"
+	pageSizeParam   = "pageSize"
+	defaultSort     = RecentSort
+	minPage         = 1
+	defaultPage     = 1
+	minPageSize     = 1
+	maxPageSize     = 100
+	defaultPageSize = 50
+)
+
+// GetSort gets and sanitizes the sort param from a GET request
+func GetSort(i *api.Input) string {
+	sort := i.QueryParams[sortParam]
+	rules := input.StringRules{
+		ToLower:      true,
+		TrimSpace:    true,
+		ValidValues:  []string{RecentSort, PopularSort, ControversialSort},
+		DefaultValue: defaultSort,
+	}
+	sort, _ = input.SanitizeString(sort, rules, nil)
+	return sort
+}
+
+// GetPage gets and sanitizes the page param from a GET request
+func GetPage(i *api.Input) int {
+	pageString := i.QueryParams[pageParam]
+	rules := input.IntegerRules{
+		EnforceNumericString: false,
+		EnforceMinValue:      true,
+		MinValue:             minPage,
+		UseDefaultMinValue:   true,
+		DefaultMinValue:      defaultPage,
+	}
+	page, _ := input.SanitizeIntegerFromString(pageString, rules, nil)
+	return page
+}
+
+// GetPageSize gets and sanitizes the page size param from a GET request
+func GetPageSize(i *api.Input) int {
+	pageSizeString := i.QueryParams[pageSizeParam]
+	rules := input.IntegerRules{
+		EnforceNumericString: false,
+		EnforceMinValue:      true,
+		MinValue:             minPageSize,
+		UseDefaultMinValue:   true,
+		DefaultMinValue:      defaultPageSize,
+		EnforceMaxValue:      true,
+		MaxValue:             maxPageSize,
+		UseDefaultMaxValue:   true,
+		DefaultMaxValue:      maxPageSize,
+	}
+	pageSize, _ := input.SanitizeIntegerFromString(pageSizeString, rules, nil)
+	return pageSize
+}
